--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -10,7 +10,7 @@
                     <div class="media d-block d-sm-flex text-center text-sm-left">
                         <a class="cart-item-thumb mx-auto mr-sm-4"><img src="{{item?.image}}" alt="Product"></a>
                         <div class="media-body pt-3">
-                            <h3 class="product-card-title font-weight-semibold border-0 pb-0"><a>{{item.nombreProducto}}</a></h3>
+                            <h2 class="product-card-title font-weight-semibold border-0 pb-0"><a>{{item.nombreProducto}}</a></h2>
                             <div class="font-size-sm"><span class="text-muted mr-2">Descripción:</span>{{item.description}}</div>
                             <div class="font-size-sm"><span class="text-muted mr-2">Id:</span>{{i+1}}</div>
                             <div class="font-size-lg text-primary pt-2">Bs. {{item.precio}}</div>
@@ -18,21 +18,22 @@
                     </div>
                     <div class="pt-2 pt-sm-0 pl-sm-3 mx-auto mx-sm-0 text-center text-sm-left" style="max-width: 10rem;">
                         <div class="form-group mb-2">
-                            <label for="quantity1">Quantity</label>
-                            <input class="form-control form-control-sm" type="number" id="quantity1" value="1">
+                            <label for="quantity1">Cantidad</label>
+                            <input class="form-control form-control-sm" type="number" id="quantity1" value="1" min="1">
                         </div>
                         
-                        <button class="btn btn-outline-danger btn-sm btn-block mb-2" type="button" (click)="removeItem(item)">
+                        <button class="btn btn-outline-danger btn-sm btn-block mb-2" type="button" (click)="confirmDeleteItemNotification()">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2 mr-1">
                                 <polyline points="3 6 5 6 21 6"></polyline>
                                 <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
                                 <line x1="10" y1="11" x2="10" y2="17"></line>
                                 <line x1="14" y1="11" x2="14" y2="17"></line>
-                            </svg>Remove</button>
+                            </svg>Eliminar</button>
                     </div>
                 </div>
             </div>
             <div class="col-xl-3 col-md-4 pt-3 pt-md-0">
+                &nbsp;
                 <h2 class="h6 px-4 py-3 bg-secondary text-center">Subtotal</h2>
                 <div class="h3 font-weight-semibold text-center py-3"> Bs. {{total()}}</div>
                 <hr>
@@ -40,7 +41,23 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-credit-card mr-2">
                         <rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect>
                         <line x1="1" y1="10" x2="23" y2="10"></line>
-                    </svg>Proceder con la compra</a>
+                    </svg>Proceder con la compra
+                </a>
+                &nbsp;
+                <a class="btn btn-danger btn-block" (click)="emptycart()" style="color:#ffffff">
+                    <svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect>
+                        <line x1="1" y1="10" x2="23" y2="10"></line>
+                    </svg> Vaciar Carrito
+                </a>
+                &nbsp;
+                <a class="btn btn-info btn-block" [routerLink]="['/products']" style="color:#ffffff">
+                    <svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect>
+                        <line x1="1" y1="10" x2="23" y2="10"></line>
+                    </svg> Seguir comprando
+                </a>
+                   
             </div>
         </div>
     </div>
