--- a/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
@@ -35,6 +35,10 @@
                 <mat-icon>dialpad</mat-icon>
                 <span>Asignar Características</span>
               </button>
+              <button mat-menu-item [routerLink]="['/providerdashboard/offers']">
+                <mat-icon>stars</mat-icon>
+                <span>Asignar Oferta</span>
+              </button>
               <button mat-menu-item >
                 <mat-icon>edit</mat-icon>
                 <span>Editar</span>
