--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -13,45 +13,23 @@
 <section class="py-5">
   <div class="container px-4 px-lg-5 my-5">
   <div class="row">
-    <div class="col-md-4 order-md-2 mb-4">
+    <div class="col-md-4 order-md-2 mb-4" >
       <h4 class="d-flex justify-content-between align-items-center mb-3">
-        <span class="text-muted">Your cart</span>
-        <span class="badge badge-secondary badge-pill">3</span>
+        <span class="text-muted">Su lista de productos</span>
       </h4>
-      <ul class="list-group mb-3">
+      <ul class="list-group mb-3" *ngFor="let item of products; let i = index">
         <li class="list-group-item d-flex justify-content-between lh-condensed">
           <div>
-            <h6 class="my-0">Product name</h6>
-            <small class="text-muted">Brief description</small>
+            <h3 class="my-0">{{item.nombreProducto}}</h3>
+            <h4 class="text-muted">{{item.description}}</h4>
           </div>
-          <span class="text-muted">$12</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between lh-condensed">
-          <div>
-            <h6 class="my-0">Second product</h6>
-            <small class="text-muted">Brief description</small>
-          </div>
-          <span class="text-muted">$8</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between lh-condensed">
-          <div>
-            <h6 class="my-0">Third item</h6>
-            <small class="text-muted">Brief description</small>
-          </div>
-          <span class="text-muted">$5</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between bg-light">
-          <div class="text-success">
-            <h6 class="my-0">Promo code</h6>
-            <small>EXAMPLECODE</small>
-          </div>
-          <span class="text-success">-$5</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between">
-          <span>Total (USD)</span>
-          <strong>$20</strong>
+          <span class="text-muted">Bs. {{item.precio}}</span>
         </li>
       </ul>
+      <li class="list-group-item d-flex justify-content-between">
+        <span>Total a pagar: </span>
+        <strong>Bs. {{total()}}</strong>
+      </li>
     </div>
 
     <div class="col-md-8 order-md-1">
