--- a/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
@@ -36,7 +36,7 @@
                 <mat-icon>dialpad</mat-icon>
                 <span>Asignar Características</span>
               </button>
-              <button mat-menu-item [routerLink]="['/providerdashboard/offers']">
+              <button mat-menu-item [routerLink]="['/providerdashboard/offers/', element.idProducto]">
                 <mat-icon>stars</mat-icon>
                 <span>Asignar Oferta</span>
               </button>
