--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -21,10 +21,10 @@
           
                             <div class="form-group mb-2">
                                 <label for="cantidad">Cantidad</label>
-                                <input class="form-control form-control-sm" type="number" id="cantidad" value="1" min="1" max="1" formControlName="cantidad" placeholder="1">
+                                <input class="form-control form-control-sm" type="number" id="cantidad" value="1" min="1" max="100" formControlName="cantidad" placeholder="1">
                             </div>
                             <div class="form-group mb-2">
-                                <label for="cantidad-precio">Total por producto:  Bs. {{item.precio}}</label>
+                                <label for="cantidad-precio">Total por producto:  Bs. {{item.precio*cantidad}}</label>
                             </div>    
                             
                         </form>
