agregando funcionalidad a boton ruta grafico ciudades

--- a/src/app/components/dashboard/dashboard-provider/dashboard-index/dashboard-index.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-index/dashboard-index.component.html
@@ -1,10 +1,10 @@
 <div style="text-align: center;">
-  <h1 class="mb-3 font-medium">PROVEEDORES</h1>	
+  <h1 class="mb-3 font-medium">PROVEEDORES</h1>
   <h2 class="mb-3 font-medium">{{administrator.nombre}} {{administrator.apellido}}</h2>
-  
+
 </div>
 <div class="grid grid-cols-12 gap-4 lg:gap-8">
-  
+
 
   <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
 	<img src="https://cdn-icons-png.flaticon.com/512/432/432796.png" alt="Logo" class="center" />
@@ -18,7 +18,11 @@
 	<br>
     <h4 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR CIUDADES</h4>
     <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por ciudades estadísticamente</div>
-    <a  class="button" mat-flat-button color="accent" >Ver</a>
+    <a
+      class="button"
+      mat-flat-button color="accent"
+      routerLink="/providerdashboard/chart-by-city"
+    >Ver</a>
   </div>
   <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
 	<img src="https://i.pinimg.com/originals/a6/1e/48/a61e481ee91b33b02e5bfdc5638bb1df.png" alt="Logo" class="center" />
@@ -26,16 +30,16 @@
     <h4 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR GÉNERO</h4>
     <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por género estadísticamente</div>
     <a  class="button" mat-flat-button color="warn" >Ver</a>
-  </div>  
+  </div>
 </div>
 
 
 <div class="grid grid-cols-12 gap-4 lg:gap-8">
 
   <div class="col-span-6 md:col-span-4  rounded px-4 lg:px-8 py-8 lg:py-16">
-	
+
 	<br>
-    
+
   </div>
   <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
 	<img src="https://cdn-icons-png.flaticon.com/512/411/411720.png" alt="Logo" class="center" />
@@ -45,9 +49,9 @@
     <a  class="button" mat-flat-button color="accent" >Ver</a>
   </div>
   <div class="col-span-6 md:col-span-4 rounded px-4 lg:px-8 py-8 lg:py-16">
-	
+
 	<br>
-   
-  </div>  
+
+  </div>
 </div>
 
