agregando elementos a la interfaz de productos mas vendidos por ciudades

--- a/src/app/components/dashboard/dashboard-provider/dashboard-chart-by-city/dashboard-chart-by-city.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-chart-by-city/dashboard-chart-by-city.component.html
@@ -1,1 +1,9 @@
-<p>dashboard-chart-by-city works!</p>
+<div>
+  <div style="text-align: center;">
+    <h1>PRODUCTOS MAS VENDIDOS POR CIUDADES</h1>
+  </div>
+  <button
+    mat-flat-button color="accent"
+    routerLink="/providerdashboard/chart-by-city"
+  >Exportar a PDF</button>
+</div>
