--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -21,8 +21,14 @@
           <mat-icon>menu</mat-icon>
         </button>
         <div class="hidden items-center md:flex ml-auto">  
-          <a [routerLink]="['/authclient/login']" mat-raised-button color="warn" class="text-lg font-bold py-2 px-5">Iniciar Sesión</a>
-          <a [routerLink]="['/authclient/signup']" mat-raised-button color="accent" class="text-lg font-bold py-2 px-5 ml-2">Registro</a>
+          <div *ngIf="tokenCli!=''">
+            <a mat-raised-button color="warn" class="text-lg font-bold py-2 px-5">Editar Datos</a>
+            <a (click)="logout()" mat-raised-button color="accent" class="text-lg font-bold py-2 px-5 ml-2">Cerrar Sesion</a>
+          </div>
+          <div *ngIf="tokenCli==''">
+            <a [routerLink]="['/authclient/login']" mat-raised-button color="primary" class="text-lg font-bold py-2 px-5">Iniciar Sesión</a>
+            <a [routerLink]="['/authclient/signup']" mat-raised-button color="warn" class="text-lg font-bold py-2 px-5 ml-2">Registro</a>
+          </div>
           <div class="navbar-nav ml-auto">
             <mat-toolbar-row>
             
