--- a/src/app/components/auth-session/auth-client/edit-client/edit-client.component.html
+++ b/src/app/components/auth-session/auth-client/edit-client/edit-client.component.html
@@ -7,7 +7,7 @@
     <div class="login__content flex flex-col justify-center bg-accent" style="background-color: #28778E;">
       <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
         <form [formGroup]="newUserForm" (ngSubmit)="addNewAdmin(newUserForm.value)">
-          <h1 class="text-2xl font-bold">REGISTRO - CLIENTE</h1>
+          <h1 class="text-2xl font-bold">Editar datos - CLIENTE</h1>
           <div class="mb-4 mt-6">
             <label class="block text-gray-700 text-sm font-semibold mb-2" for="nombre"> Nombre </label>
             <input
