--- a/src/app/components/auth-session/auth-client/edit-client/edit-client.component.html
+++ b/src/app/components/auth-session/auth-client/edit-client/edit-client.component.html
@@ -4,9 +4,10 @@
       <a  class="w-48 inline-block"><img src="https://images.vexels.com/media/users/3/132103/isolated/preview/2b512b5ece5d914e68950bfdbf73b481-icono-de-circulo-de-carrito-de-compras.png" alt="Trendy" /></a>
       <h2 class="text-center mt-6">TRENDY STORE, INSPIRANDO MODA</h2>
     </div>
+
     <div class="login__content flex flex-col justify-center bg-accent" style="background-color: #28778E;">
       <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
-        <form [formGroup]="newUserForm" (ngSubmit)="addNewAdmin(newUserForm.value)">
+        <form [formGroup]="datosUsuario" (ngSubmit)="editAdmin()">
           <h1 class="text-2xl font-bold">Editar datos - CLIENTE</h1>
           <div class="mb-4 mt-6">
             <label class="block text-gray-700 text-sm font-semibold mb-2" for="nombre"> Nombre </label>
@@ -46,17 +47,77 @@
                 type="text"
                 placeholder="Email "
                 formControlName="correoElectronico"
+                disabled
               />
           </div>
-          <div class="mb-6 mt-6">
-            <label class="block text-gray-700 text-sm font-semibold mb-2" for="address"> Dirección  </label>
-            <select class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10" 
-                id="browsers"
-                formControlName="direccionId">
-                <option value="1" type="number">Dirección 1</option>
-                <option value="2" type="number">Dirección 2</option>
-            </select>
+          
+          <div class="mb-3">
+            <label for="address" class="block text-gray-700 text-sm font-semibold mb-2">Dirección de Envío</label>
+            <div class="input-group">
+              <form [formGroup]="direccionA">
+                <input type="text" 
+                class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+                id="address" 
+                placeholder="Dirección" 
+                formControlName="direccionA" disabled/>
+                <div class="input-group-prepend">
+                  <span class="input-group-btn">
+                    <button (click)="advanceSearchExpanded = !advanceSearchExpanded" mat-button style="background-color:#cc9751;"><mat-icon>edit</mat-icon> Modificar</button>
+                  </span>
+                </div>
+              </form>
+            </div>
+  
+            <mat-expansion-panel [expanded]="advanceSearchExpanded">
+            <form [formGroup]="datosDireccion" (ngSubmit)="editAddress()">
+              <div class="mb-3">
+                <br>
+                <label for="address2" class="block text-gray-700 text-sm font-semibold mb-2">Dirección Nueva </label>
+                <input type="text" 
+                class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+                id="address2" 
+                placeholder="Nueva dirección" 
+                formControlName="nombreDireccion"/>
+              </div>
+              <div class="row">
+                <div class="col-md-5 mb-3">
+                  <label for="country" class="block text-gray-700 text-sm font-semibold mb-2">Ciudad</label>
+                  <select class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+                   id="city" formControlName="ciudadId">
+                    <option value="1" type="number">La Paz</option>
+                    <option value="2" type="number">Santa Cruz</option>
+                    <option value="3" type="number">Cochabamba</option>
+                    <option value="4" type="number">Sucre</option>
+                    <option value="5" type="number">Oruro</option>
+                    <option value="6" type="number">Tarija</option>
+                    <option value="7" type="number">Potosí</option>
+                    <option value="8" type="number">Beni</option>
+                    <option value="9" type="number">Pando</option>
+                  </select>
+                </div>
+                <div class="col-md-4 mb-3">
+                  <label for="number" class="block text-gray-700 text-sm font-semibold mb-2">Teléfono</label>
+                  <input type="text" 
+                  class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+                  id="code" 
+                  placeholder="" 
+                  formControlName="telefono"/>
+                </div>
+                <div class="col-md-3 mb-3">
+                  <label for="zip" class="block text-gray-700 text-sm font-semibold mb-2">Código postal</label>
+                  <input type="text" 
+                  class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+                  id="code" 
+                  placeholder="" 
+                  formControlName="codigoPostal"/>
+                </div>
+                <button class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
+                 type="submit">Actualizar Direccion</button>
+              </div>
+            </form>
+            </mat-expansion-panel>
           </div>
+
           <div class="mb-6 mt-6">
             <label class="block text-gray-700 text-sm font-semibold mb-2" for="password"> Password </label>
             <input
