--- a/src/app/components/dashboard/dashboard-provider/dashboard-offers/dashboard-offers.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-offers/dashboard-offers.component.html
@@ -22,12 +22,12 @@
 
 		  	<ng-container matColumnDef="oferta_id">
 				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by oferta_id"> Id Oferta </th>
-				<td mat-cell *matCellDef="let element"> {{element.oferta_id}} </td>
+				<td mat-cell *matCellDef="let element"> {{element.ofertaId}} </td>
 		  	</ng-container>
 
 		  	<ng-container matColumnDef="producto_id">
 				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by producto_id"> Id Producto </th>
-				<td mat-cell *matCellDef="let element"> {{element.producto_id}} </td>
+				<td mat-cell *matCellDef="let element"> {{element.productoId}} </td>
 		  	</ng-container>
         <ng-container matColumnDef="opciones">
           <th mat-header-cell *matHeaderCellDef> Opciones </th>
