--- a/src/app/components/dashboard/dashboard-provider/addoffers/addoffers.component.html
+++ b/src/app/components/dashboard/dashboard-provider/addoffers/addoffers.component.html
@@ -12,7 +12,7 @@
                     id="fechainicio"
                     type="date"
                     placeholder="Fecha de Inicio"
-                    min="2022-05-06" 
+                    min="2022-06-01" 
                     formControlName="fechaInicio"
                   />
               </div>
@@ -28,11 +28,11 @@
                   />
               </div>
               <div class="mb-6 mt-6">
-                <label class="block text-gray-700 text-sm font-semibold mb-2" for="descuento"> Monto de descuento </label>
+                <label class="block text-gray-700 text-sm font-semibold mb-2" for="descuento"> Monto de descuento (Bs.) </label>
                   <input
                     class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
                     id="descuento"
-                    type="number" min="1" step="any"
+                    type="number" min="10" step="5"
                     placeholder="Descuento"
                     formControlName="montoDescuento"
                   />
