--- a/src/app/components/dashboard/dashboard-provider/dashboard-inactive-offers/dashboard-inactive-offers.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-inactive-offers/dashboard-inactive-offers.component.html
@@ -1,17 +1,13 @@
 <div>
 	<div style="text-align: center;">
-	  <h1>OFERTAS </h1>
+	  <h1>OFERTAS - PRODUCTOS</h1>
 	</div>
 	<div>
 	  <div class="flex justify-between flex-wrap">
-		<h2 class="mb-3 font-medium">LISTA DE OFERTAS INACTIVAS</h2>
+		<h2 class="mb-3 font-medium">LISTA DE OFERTAS - PRODUCTOS INACTIVOS</h2>
 	  </div>
     </div> 
 	<div class="table-inside">
-		<mat-form-field>
-			<mat-label>Filtro</mat-label>
-			<input matInput (keyup)="applyFilter($event)"  #input>
-		</mat-form-field>
 
 
 		<table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)"  class="mat-elevation-z8">
@@ -29,28 +25,6 @@
 				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by producto_id"> Id Producto </th>
 				<td mat-cell *matCellDef="let element"> {{element.productoId}} </td>
 		  	</ng-container>
-        <ng-container matColumnDef="opciones">
-          <th mat-header-cell *matHeaderCellDef> Opciones </th>
-          <td mat-cell *matCellDef="let element">
-            <div class="text-right">
-              <button class="action_icon__btn" mat-icon-button [matMenuTriggerFor]="menu">
-                <mat-icon>more_vert</mat-icon>
-              </button>
-              <mat-menu #menu="matMenu" xposition="before">
-                <button mat-menu-item (click)="deleteProviderNotification(element?.id)">
-                  <mat-icon>delete</mat-icon>
-                  <span>Eliminar oferta</span>
-                </button>
-                <button mat-menu-item (click)="irAInterfazEditar(element?.id)">
-                  <mat-icon>update</mat-icon>
-                  <span>Editar oferta</span>
-                </button>
-              </mat-menu>
-
-
-            </div>
-          </td>
-        </ng-container>
 
 		  	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     	  	<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
