--- a/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
@@ -12,6 +12,10 @@
     </div>
 
     <mat-table #table [dataSource]="dataSource">
+      <ng-container matColumnDef="id">
+        <mat-header-cell *matHeaderCellDef> id </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.idProducto}} </mat-cell>
+      </ng-container>
       <ng-container matColumnDef="Producto">
         <mat-header-cell *matHeaderCellDef> Producto </mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.nombreProducto}} </mat-cell>
@@ -40,7 +44,7 @@
                 <mat-icon>stars</mat-icon>
                 <span>Asignar Oferta</span>
               </button>
-              <button mat-menu-item >
+              <button mat-menu-item (click)="irAInterfazEditar(element?.idProducto)">
                 <mat-icon>edit</mat-icon>
                 <span>Editar</span>
               </button>
