--- a/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
@@ -40,7 +40,7 @@
                 <mat-icon>stars</mat-icon>
                 <span>Asignar Oferta</span>
               </button>
-              <button mat-menu-item >
+              <button mat-menu-item [routerLink]="['/editproduct/', element.idProducto]">
                 <mat-icon>edit</mat-icon>
                 <span>Editar</span>
               </button>
